tests/js/error/semantics/builtin_array1.js
/*******************************************************************************
    Copyright (c) 2012, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ******************************************************************************/

var x = new Array();

var __result1 = x.length
var __expect1 = 0
var __result2 = x[0]
var __expect2 = undefined

